started on search engine implementation

--- a/001-glove-simple.ipynb
+++ b/001-glove-simple.ipynb
@@ -24,28 +24,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy in /home/spm1976/anaconda3/lib/python3.9/site-packages (from -r requirements.txt (line 1)) (1.24.3)\n",
-      "Requirement already satisfied: scipy in /home/spm1976/anaconda3/lib/python3.9/site-packages (from -r requirements.txt (line 2)) (1.10.1)\n",
-      "Requirement already satisfied: matplotlib in /home/spm1976/anaconda3/lib/python3.9/site-packages (from -r requirements.txt (line 3)) (3.7.1)\n",
-      "Requirement already satisfied: scikit-learn in /home/spm1976/anaconda3/lib/python3.9/site-packages (from -r requirements.txt (line 4)) (1.2.2)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r requirements.txt (line 3)) (1.4.4)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r requirements.txt (line 3)) (9.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r requirements.txt (line 3)) (3.0.9)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r requirements.txt (line 3)) (5.9.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r requirements.txt (line 3)) (4.37.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r requirements.txt (line 3)) (2.8.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r requirements.txt (line 3)) (23.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r requirements.txt (line 3)) (1.0.7)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r requirements.txt (line 3)) (0.11.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from scikit-learn->-r requirements.txt (line 4)) (3.1.0)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from scikit-learn->-r requirements.txt (line 4)) (1.2.0)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from importlib-resources>=3.2.0->matplotlib->-r requirements.txt (line 3)) (3.11.0)\n",
-      "Requirement already satisfied: six>=1.5 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib->-r requirements.txt (line 3)) (1.16.0)\n"
+      "Requirement already satisfied: numpy in /home/spm1976/anaconda3/lib/python3.9/site-packages (from -r 001-requirements.txt (line 1)) (1.24.3)\n",
+      "Requirement already satisfied: scipy in /home/spm1976/anaconda3/lib/python3.9/site-packages (from -r 001-requirements.txt (line 2)) (1.10.1)\n",
+      "Requirement already satisfied: matplotlib in /home/spm1976/anaconda3/lib/python3.9/site-packages (from -r 001-requirements.txt (line 3)) (3.7.1)\n",
+      "Requirement already satisfied: scikit-learn in /home/spm1976/anaconda3/lib/python3.9/site-packages (from -r 001-requirements.txt (line 4)) (1.2.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (2.8.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (1.4.4)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (1.0.7)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (3.0.9)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (9.4.0)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (5.9.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (4.37.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (23.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (0.11.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from scikit-learn->-r 001-requirements.txt (line 4)) (3.1.0)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from scikit-learn->-r 001-requirements.txt (line 4)) (1.2.0)\n",
+      "Requirement already satisfied: zipp>=3.1.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from importlib-resources>=3.2.0->matplotlib->-r 001-requirements.txt (line 3)) (3.11.0)\n",
+      "Requirement already satisfied: six>=1.5 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib->-r 001-requirements.txt (line 3)) (1.16.0)\n"
      ]
     }
    ],
    "source": [
-    "!pip install -U -r requirements.txt"
+    "!pip install -U -r 001-requirements.txt"
    ]
   },
   {
@@ -71,21 +71,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2023-06-03 14:46:11--  https://nlp.stanford.edu/data/glove.6B.zip\n",
+      "--2023-06-04 11:38:17--  https://nlp.stanford.edu/data/glove.6B.zip\n",
       "Resolving nlp.stanford.edu (nlp.stanford.edu)... 171.64.67.140\n",
       "Connecting to nlp.stanford.edu (nlp.stanford.edu)|171.64.67.140|:443... connected.\n",
       "HTTP request sent, awaiting response... 301 Moved Permanently\n",
       "Location: https://downloads.cs.stanford.edu/nlp/data/glove.6B.zip [following]\n",
-      "--2023-06-03 14:46:11--  https://downloads.cs.stanford.edu/nlp/data/glove.6B.zip\n",
+      "--2023-06-04 11:38:17--  https://downloads.cs.stanford.edu/nlp/data/glove.6B.zip\n",
       "Resolving downloads.cs.stanford.edu (downloads.cs.stanford.edu)... 171.64.64.22\n",
       "Connecting to downloads.cs.stanford.edu (downloads.cs.stanford.edu)|171.64.64.22|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 862182613 (822M) [application/zip]\n",
       "Saving to: ‘data/glove/glove.6B.zip’\n",
       "\n",
-      "data/glove/glove.6B 100%[===================>] 822.24M  5.01MB/s    in 2m 39s  \n",
+      "data/glove/glove.6B 100%[===================>] 822.24M  5.02MB/s    in 2m 38s  \n",
       "\n",
-      "2023-06-03 14:48:51 (5.17 MB/s) - ‘data/glove/glove.6B.zip’ saved [862182613/862182613]\n",
+      "2023-06-04 11:40:56 (5.19 MB/s) - ‘data/glove/glove.6B.zip’ saved [862182613/862182613]\n",
       "\n",
       "Archive:  data/glove/glove.6B.zip\n",
       "  inflating: data/glove/glove.6B.50d.txt  \n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "a01e4a52-268a-4939-b5aa-c985a969550d",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "000794f5-4568-436b-8685-6abe5886619e",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "149af473-015f-4944-a662-8c98f190ddcb",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        " 'palmpilot']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "ea164fd4-5b00-468c-8318-c270dc1df7a9",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
        " 'palmpilot']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "804fc6b8-37e4-4de8-a2f8-95781027bdaa",
    "metadata": {},
    "outputs": [
