hid chatGPT api key

--- a/001-glove-simple.ipynb
+++ b/001-glove-simple.ipynb
@@ -24,23 +24,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy in /home/spm1976/anaconda3/lib/python3.9/site-packages (from -r 001-requirements.txt (line 1)) (1.24.3)\n",
-      "Requirement already satisfied: scipy in /home/spm1976/anaconda3/lib/python3.9/site-packages (from -r 001-requirements.txt (line 2)) (1.10.1)\n",
-      "Requirement already satisfied: matplotlib in /home/spm1976/anaconda3/lib/python3.9/site-packages (from -r 001-requirements.txt (line 3)) (3.7.1)\n",
-      "Requirement already satisfied: scikit-learn in /home/spm1976/anaconda3/lib/python3.9/site-packages (from -r 001-requirements.txt (line 4)) (1.2.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (2.8.2)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (1.4.4)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (1.0.7)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (3.0.9)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (9.4.0)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (5.9.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (4.37.1)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (23.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (0.11.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from scikit-learn->-r 001-requirements.txt (line 4)) (3.1.0)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from scikit-learn->-r 001-requirements.txt (line 4)) (1.2.0)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from importlib-resources>=3.2.0->matplotlib->-r 001-requirements.txt (line 3)) (3.11.0)\n",
-      "Requirement already satisfied: six>=1.5 in /home/spm1976/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib->-r 001-requirements.txt (line 3)) (1.16.0)\n"
+      "Requirement already satisfied: numpy in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from -r 001-requirements.txt (line 1)) (1.25.0)\n",
+      "Requirement already satisfied: scipy in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from -r 001-requirements.txt (line 2)) (1.11.0)\n",
+      "Requirement already satisfied: matplotlib in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from -r 001-requirements.txt (line 3)) (3.7.1)\n",
+      "Requirement already satisfied: scikit-learn in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from -r 001-requirements.txt (line 4)) (1.2.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (1.1.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (4.40.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (1.4.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (23.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (9.2.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (3.1.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from matplotlib->-r 001-requirements.txt (line 3)) (2.8.2)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from scikit-learn->-r 001-requirements.txt (line 4)) (1.2.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from scikit-learn->-r 001-requirements.txt (line 4)) (3.1.0)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/spm1976/anaconda3/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib->-r 001-requirements.txt (line 3)) (1.16.0)\n"
      ]
     }
    ],
@@ -58,7 +56,11 @@
     "Head over to https://nlp.stanford.edu/projects/glove/.\n",
     "<p>\n",
     "Then underneath “Download pre-trained word vectors,” you can choose any of the four options for different sizes or training datasets.\n",
-    "I have chosen the Wikipedia 2014 + Gigaword 5 vectors. You can download those exact vectors at http://nlp.stanford.edu/data/glove.6B.zip (WARNING: THIS IS A 822 MB DOWNLOAD)"
+    "I have chosen the Wikipedia 2014 + Gigaword 5 vectors. You can download those exact vectors at http://nlp.stanford.edu/data/glove.6B.zip (WARNING: THIS IS A 822 MB DOWNLOAD)\n",
+    "    \n",
+    "Note: The Stanford library is having an outage as-of writing this article, so I was able to retrieve and compress the file from Kaggle.\n",
+    "    \n",
+    "https://cs.stanford.edu/srcf_404"
    ]
   },
   {
@@ -68,37 +70,38 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "--2023-06-04 11:38:17--  https://nlp.stanford.edu/data/glove.6B.zip\n",
+      "bash: line 2: L_GLOVE_ZIPFILE: command not found\n",
+      "--2023-06-28 12:18:10--  https://nlp.stanford.edu/data/glove.6B.zip\n",
       "Resolving nlp.stanford.edu (nlp.stanford.edu)... 171.64.67.140\n",
       "Connecting to nlp.stanford.edu (nlp.stanford.edu)|171.64.67.140|:443... connected.\n",
-      "HTTP request sent, awaiting response... 301 Moved Permanently\n",
-      "Location: https://downloads.cs.stanford.edu/nlp/data/glove.6B.zip [following]\n",
-      "--2023-06-04 11:38:17--  https://downloads.cs.stanford.edu/nlp/data/glove.6B.zip\n",
-      "Resolving downloads.cs.stanford.edu (downloads.cs.stanford.edu)... 171.64.64.22\n",
-      "Connecting to downloads.cs.stanford.edu (downloads.cs.stanford.edu)|171.64.64.22|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://cs.stanford.edu/srcf_404 [following]\n",
+      "--2023-06-28 12:18:11--  https://cs.stanford.edu/srcf_404\n",
+      "Resolving cs.stanford.edu (cs.stanford.edu)... 171.64.64.64\n",
+      "Connecting to cs.stanford.edu (cs.stanford.edu)|171.64.64.64|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 862182613 (822M) [application/zip]\n",
+      "Length: unspecified [text/html]\n",
       "Saving to: ‘data/glove/glove.6B.zip’\n",
       "\n",
-      "data/glove/glove.6B 100%[===================>] 822.24M  5.02MB/s    in 2m 38s  \n",
+      "     0K .......... .......... .......... .........              460K=0.09s\n",
       "\n",
-      "2023-06-04 11:40:56 (5.19 MB/s) - ‘data/glove/glove.6B.zip’ saved [862182613/862182613]\n",
-      "\n",
-      "Archive:  data/glove/glove.6B.zip\n",
-      "  inflating: data/glove/glove.6B.50d.txt  \n",
-      "  inflating: data/glove/glove.6B.100d.txt  \n",
-      "  inflating: data/glove/glove.6B.200d.txt  \n",
-      "  inflating: data/glove/glove.6B.300d.txt  \n"
+      "2023-06-28 12:18:11 (460 KB/s) - ‘data/glove/glove.6B.zip’ saved [40360]\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "!mkdir -p data/glove\n",
-    "!wget https://nlp.stanford.edu/data/glove.6B.zip -O data/glove/glove.6B.zip\n",
-    "!unzip -o data/glove/glove.6B.zip -d data/glove/"
+    "%%bash\n",
+    "\n",
+    "L_GLOVE_ZIPFILE = 'data/glove/glove.6B.zip'\n",
+    "\n",
+    "if [[ ! -f ${L_GLOVE_ZIPFILE} ]]; then\n",
+    "    mkdir -p data/glove\n",
+    "    wget https://nlp.stanford.edu/data/glove.6B.zip -O data/glove/glove.6B.zip\n",
+    "fi"
    ]
   },
   {
@@ -119,7 +122,8 @@
     "import numpy as np\n",
     "from scipy import spatial\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.manifold import TSNE"
+    "from sklearn.manifold import TSNE\n",
+    "import gzip"
    ]
   },
   {
@@ -147,12 +151,14 @@
    "source": [
     "embeddings_dict = dict()\n",
     "\n",
-    "with open(\"data/glove/glove.6B.50d.txt\", 'r', encoding=\"utf-8\") as f:\n",
+    "with gzip.open(\"data/glove/glove.6B.50d.txt.gz\", 'rt', encoding='utf-8') as f:\n",
     "    for line in f:\n",
     "        values = line.split()\n",
     "        word = values[0]\n",
     "        vector = np.asarray(values[1:], \"float32\")\n",
-    "        embeddings_dict[word] = vector"
+    "        embeddings_dict[word] = vector\n",
+    "\n",
+    "#print(list(embeddings_dict.items())[:10])"
    ]
   },
   {
@@ -202,16 +208,16 @@
     {
      "data": {
       "text/plain": [
-       "['macbook',\n",
-       " 'ibook',\n",
-       " 'imac',\n",
-       " 'powermac',\n",
-       " 'roadster',\n",
-       " 'earbuds',\n",
-       " 'g3',\n",
-       " 'charger',\n",
-       " 'souped',\n",
-       " 'palmpilot']"
+       "['math',\n",
+       " 'maths',\n",
+       " 'instruction',\n",
+       " 'curriculum',\n",
+       " 'graders',\n",
+       " 'graduates',\n",
+       " 'lesson',\n",
+       " 'learning',\n",
+       " 'curricula',\n",
+       " 'undergraduate']"
       ]
      },
      "execution_count": 6,
@@ -220,7 +226,7 @@
     }
    ],
    "source": [
-    "find_closest_embeddings(embeddings_dict[\"macbook\"])[:10]"
+    "find_closest_embeddings(embeddings_dict['math'])[:10]"
    ]
   },
   {
@@ -240,15 +246,15 @@
     {
      "data": {
       "text/plain": [
-       "['ibook',\n",
-       " 'imac',\n",
-       " 'powermac',\n",
-       " 'roadster',\n",
-       " 'earbuds',\n",
-       " 'g3',\n",
-       " 'charger',\n",
-       " 'souped',\n",
-       " 'palmpilot']"
+       "['maths',\n",
+       " 'instruction',\n",
+       " 'curriculum',\n",
+       " 'graders',\n",
+       " 'graduates',\n",
+       " 'lesson',\n",
+       " 'learning',\n",
+       " 'curricula',\n",
+       " 'undergraduate']"
       ]
      },
      "execution_count": 7,
@@ -257,7 +263,7 @@
     }
    ],
    "source": [
-    "find_closest_embeddings(embeddings_dict[\"macbook\"])[1:10]"
+    "find_closest_embeddings(embeddings_dict['math'])[1:10]"
    ]
   },
   {
@@ -324,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
